[package]
name = "curved_gear"
version = "0.1.0"
authors = ["angel-manuel <angel_manuel_martin@yahoo.es>"]
description = "Implementation of CurveCP"
license = "MIT"
repository = "https://github.com/angel-manuel/curved_gear"

[dependencies]
log = "0.3"
env_logger = "0.3"
sodiumoxide = "0.0.9"
rustc-serialize = "0.3"
bincode = "*"
byteorder = "*"
ascii = "*"
nettraits = "*"
